--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,13 +1,12 @@
-@font-face 
+@font-face
   font-family: 'sell-icon'
-  src:  url('fonts/sell-icon.eot?6u6oal')
-  src:  url('fonts/sell-icon.eot?6u6oal#iefix') format('embedded-opentype'),
-    url('fonts/sell-icon.ttf?6u6oal') format('truetype'),
-    url('fonts/sell-icon.woff?6u6oal') format('woff'),
-    url('fonts/sell-icon.svg?6u6oal#sell-icon') format('svg')
+  src: url('../fonts/sell-icon.eot?k5xf13');
+  src: url('../fonts/sell-icon.eot?k5xf13#iefix') format('embedded-opentype'),
+          url('../fonts/sell-icon.ttf?k5xf13') format('truetype'),
+          url('../fonts/sell-icon.woff?k5xf13') format('woff'),
+          url('../fonts/sell-icon.svg?k5xf13#sell-icon') format('svg')
   font-weight: normal
   font-style: normal
-
 
 [class^="icon-"], [class*=" icon-"] 
   /* use !important to prevent issues with browser extensions that change fonts */
